refactor: introduce PhysicalTenantEngineContext to bundle per-PT broker objects
Collapses the three parallel Map<String, X> structures (EngineSecurityConfig,
BrokerRequestAuthorizationConverter, FeatureFlags) threaded through the broker
startup chain into a single Map<String, PhysicalTenantEngineContext>. Reduces
three fields, ctor params, accessors, and unknown-id guards at each link
(BrokerModuleConfiguration → SystemContext → BrokerStartupContext(Impl) →
PartitionManagerStep) to one each. No behavioral change.

Closes #55444

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>